--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,20 @@
-# make it explicit that we favor the new container-based travis workers
-sudo: false
-
 language: python
-
-env:
-  global:
-    # Directory where tests are run from
-    - TEST_DIR=/tmp/pactools
-  matrix:
-    - DISTRIB="ubuntu" PYTHON_VERSION="2.7"
-
-    - DISTRIB="conda" PYTHON_VERSION="3.6" INSTALL_MKL="true"
-      NUMPY_VERSION="1.11.2" SCIPY_VERSION="0.18.1" COVERAGE="true"
-
-
-install: source continuous_integration/install.sh
-before_script: source continuous_integration/before_script.sh
-script: source continuous_integration/test_script.sh
-after_success: source continuous_integration/after_success.sh
-
-notifications:
-  email: false
+before_install:
+    - wget -q http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+    - chmod +x miniconda.sh
+    - ./miniconda.sh -b -p /home/travis/miniconda
+    - export PATH=/home/travis/miniconda/bin:$PATH
+    - conda update --yes --quiet conda
+install:
+    - conda create -n testenv --yes pip python=3.6
+    - source activate testenv
+    - conda install --yes --quiet numpy=1.10 scipy=0.17 matplotlib=1.5 mne=0.11
+    - conda install --yes --quiet pytest pytest-cov
+    - pip install -q flake8
+    - python setup.py install
+script:
+    - python pactools/utils/print_package_versions.py
+    - pytest --cov=pactools pactools -v
+    - flake8 --count pactools
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
