--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ script:
     - flake8 --count pactools
 after_success:
     - bash <(curl -s https://codecov.io/bash)
+
+notifications:
+  email: false
