--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
     - pip install -q flake8 mne
     - make install
 script:
-    - pytest --cov=pactools pactools -v
+    - python run_pytest.py --cov=pactools
     - make flake8
 after_success:
     - bash <(curl -s https://codecov.io/bash)
