disable codecov comments

--- a/codecov.yml
+++ b/codecov.yml
@@ -11,6 +11,4 @@ coverage:
     changes: false
   ignore:
     - "pactools/viz"
-comment:
-  layout: "header, diff, sunburst, uncovered"
-  behavior: default
+comment: false
